--- a/nn-cuda/python-codes/final.ipynb
+++ b/nn-cuda/python-codes/final.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -178,20 +178,64 @@
      "output_type": "stream",
      "text": [
       "Using device: cuda\n",
-      "[ 1.2802037   0.1930291   0.14813042 -0.9187077   0.39928705]\n",
-      "Epoch: 1, Loss: 33.8510627746582\n",
-      "Time taken: 0.30846691131591797\n",
-      "Epoch: 2, Loss: 24.480039596557617\n",
-      "Time taken: 0.3062448501586914\n",
-      "Epoch: 3, Loss: 19.59640121459961\n",
-      "Time taken: 0.29327988624572754\n",
-      "Epoch: 4, Loss: 16.475894927978516\n",
-      "Time taken: 0.2996954917907715\n",
-      "Epoch: 5, Loss: 14.437370300292969\n",
-      "Time taken: 0.3043501377105713\n",
-      "Total time taken: 1.5120372772216797\n",
-      "Average time per epoch: 0.30240745544433595 seconds\n",
-      "Accuracy: 0.070625\n"
+      "[ 1.2802037   0.1930291   0.14813042 -0.9187077   0.39928705]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\aatta\\anaconda3\\lib\\site-packages\\transformers\\utils\\generic.py:485: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "  _torch_pytree._register_pytree_node(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1, Loss: 17.527576446533203\n",
+      "Time taken: 0.7082126140594482\n",
+      "Epoch: 2, Loss: 11.733003616333008\n",
+      "Time taken: 0.3717939853668213\n",
+      "Epoch: 3, Loss: 9.270295143127441\n",
+      "Time taken: 0.3654367923736572\n",
+      "Epoch: 4, Loss: 7.723914623260498\n",
+      "Time taken: 0.3745746612548828\n",
+      "Epoch: 5, Loss: 6.6460981369018555\n",
+      "Time taken: 0.47765040397644043\n",
+      "Epoch: 6, Loss: 5.852162837982178\n",
+      "Time taken: 0.4715690612792969\n",
+      "Epoch: 7, Loss: 5.230144500732422\n",
+      "Time taken: 0.4310479164123535\n",
+      "Epoch: 8, Loss: 4.732577323913574\n",
+      "Time taken: 0.39620208740234375\n",
+      "Epoch: 9, Loss: 4.3370442390441895\n",
+      "Time taken: 0.40636658668518066\n",
+      "Epoch: 10, Loss: 4.010096549987793\n",
+      "Time taken: 0.40944695472717285\n",
+      "Epoch: 11, Loss: 3.7300851345062256\n",
+      "Time taken: 0.3954811096191406\n",
+      "Epoch: 12, Loss: 3.4881057739257812\n",
+      "Time taken: 0.3741786479949951\n",
+      "Epoch: 13, Loss: 3.283463478088379\n",
+      "Time taken: 0.4808011054992676\n",
+      "Epoch: 14, Loss: 3.105936288833618\n",
+      "Time taken: 0.40611791610717773\n",
+      "Epoch: 15, Loss: 2.9462108612060547\n",
+      "Time taken: 0.3911290168762207\n",
+      "Epoch: 16, Loss: 2.7978906631469727\n",
+      "Time taken: 0.529900074005127\n",
+      "Epoch: 17, Loss: 2.6607627868652344\n",
+      "Time taken: 0.3580453395843506\n",
+      "Epoch: 18, Loss: 2.5370519161224365\n",
+      "Time taken: 0.37363576889038086\n",
+      "Epoch: 19, Loss: 2.42417049407959\n",
+      "Time taken: 0.36171770095825195\n",
+      "Epoch: 20, Loss: 2.3201212882995605\n",
+      "Time taken: 0.35342836380004883\n",
+      "Total time taken: 8.436736106872559\n",
+      "Average time per epoch: 0.42183680534362794 seconds\n",
+      "Accuracy: 0.09025\n"
      ]
     }
    ],
@@ -245,8 +289,8 @@
     "\n",
     "print(X_train[0, 0:5])\n",
     "\n",
-    "N_EPOCHS = 5\n",
-    "BATCH_SIZE = 1024\n",
+    "N_EPOCHS = 20\n",
+    "BATCH_SIZE = 256\n",
     "\n",
     "train_loader = DataLoader(TensorDataset(torch.from_numpy(X_train).float(), \n",
     "                                        torch.from_numpy(y_train).long()), \n",
